Fix laggy animations on Firefox

--- a/static/style.css
+++ b/static/style.css
@@ -183,7 +183,7 @@ ul.list {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    height: 25%;
+    height: 42%;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -207,24 +207,16 @@ ul.list {
     position: absolute;
     left: 50%;
     bottom: 30%;
-    transform: translate(-50%, -50%);
     animation: bounce 2s infinite alternate;
-    -moz-transform: translate(-50%, -50%);
-    -moz-animation: bounce 2s infinite alternate;
-    -webkit-transform: translate(-50%, -50%);
-    -webkit-animation: bounce 2s infinite alternate;
 }
 
 @keyframes bounce {
+    /* The skewX transform fixes the laggy animation on Firefox */
     0% {
-        transform: translate(-50%, 0);
-        -moz-transform: translate(-50%, 0);
-        -webkit-transform: translate(-50%, 0);
+        transform: skewX(0.1deg) translate(-50%, 0);
     }
     100% {
-        transform: translate(-50%, 10px);
-        -moz-transform: translate(-50%, 10px);
-        -webkit-transform: translate(-50%, 10px);
+        transform: skewX(0.1deg) translate(-50%, 0.625rem);
     }
 }
 
